new contact page

--- a/contact.html
+++ b/contact.html
@@ -65,7 +65,7 @@
         </div>
     </section>
 
-    <section class="contact">
+    <!-- <section class="contact">
         <div class="contactContainer">
             <div class="contactInfo" data-aos="fade-right" data-aos-duration="1000">
 
@@ -120,6 +120,48 @@
                 </form>
             </div>
 
+        </div>
+    </section> -->
+
+    <!--New contact page form-->
+    <section class="contact">
+        <div class="contact-form">
+            <!-- <h1>Contact Me</h1> -->
+            <!-- <p>I am available for freelance work. Connect with with me.</p> -->
+            <form action="https://formspree.io/f/moqovrvb" method="POST" class="comment-form">
+                <input type="text" name="Full Name" placeholder="Your Name" required>
+                <input type="email" name="email" id="" placeholder="E-mail" required>
+                <input type="" placeholder="Subject">
+                <textarea  name="message" required="required" placeholder="Your message here"></textarea>
+                <input type="submit" name="" value="send" class="btn">
+            </form>
+        </div>
+
+        <div class="extraInfo">
+            <div class="extraInfoContainer">
+            
+                <div class="contactBox">
+                    <div class="text">
+                        <h3>Name</h3>
+                        <p>Dhruv Tripathi</p>
+                    </div>
+                </div>
+
+                <div class="contactBox">
+                    <div class="text">
+                        <h3>School</h3>
+                        <p>University of Texas at Dallas</p>
+                    </div>
+                </div>
+
+                <div class="contactBox">
+                    <div class="text">
+                        <h3>Email</h3>
+                        <p>dhruv.tr03@gmail.com</p>
+                    </div>
+                </div>
+
+            </div>
         </div>
     </section>
 
