--- a/projects.html
+++ b/projects.html
@@ -132,15 +132,13 @@
                     <h1>What are these projects?</h1>
                     <div class="infoContainerTextPClass">
                         <p class="infoContainerTextPClassContainer">
-                            These projects represent a <strong>diverse</strong> spectrum of innovation and collaboration. 
-                            <a href="girlyoumatter.html">Girlyoumatter.org</a> is a 
-                            platform dedicated to advocating for girls globally, while 
-                            <a href="acmproject.html">ACM Projects</a> focuses on mobile development using 
-                            Flutter and Firebase. 
-                            <a href="codepath.html">CodePath</a> dives into mobile app creation with XML and Kotlin, and 
-                            <a href="epics.html">UT Design EPICS</a> delves into robotics, employing 
-                            Vue, HTML, Nuxt, and PRISMA to build a competitive soccer robot. Each project embodies a unique blend of creativity, technology, and purpose, 
-                            showcasing the boundless possibilities of modern design and engineering.
+                            These projects represent a <strong>diverse</strong> spectrum of innovation and collaboration, 
+                            each one contributing a unique narrative to the ever-evolving landscape of modern design and engineering. From concept to execution, each project embodies a
+                             unique blend of creativity, technology, and purpose, pushing the boundaries of what is possible. They showcase the boundless possibilities of 
+                             modern design and engineering, illustrating the incredible potential that arises when imagination meets technical prowess. 
+                             Through the seamless integration of various disciplines and the collaborative efforts of talented individuals, 
+                             these projects not only solve problems but also inspire new ways of thinking and doing, 
+                             highlighting the transformative power of innovation in our world.
                         </p>
                     </div>
                 </div>
@@ -156,9 +154,8 @@
                 <div class="text-box-container">
                     <h2>Girl You Matter</h2>
                     <small>Aug 2023 - Present</small>
-                    <p>Built a website with multiple versions, V1, V2 and currently V3 for
-                        a non-profit organization that empowers girls transitions from middle school
-                        to high school
+                    <p>Built and maintained multiple versions (V1, V2, and V3) of a website for a 
+                        non-profit organization that supports girls transitioning from middle school to high school.
                     </p>
                     <span class="left-container-arrow"></span>
                 </div>
@@ -169,7 +166,8 @@
                 <div class="text-box-container">
                     <h2>ACM Projects</h2>
                     <small>Jan 2024 - April 2024</small>
-                    <p>Semester long project building a mobile app called ExpertEvents
+                    <p>Semester long project building a mobile app called ExpertEvents using
+                        Flutter for frontend and Firebase for backend
                     </p>
                     <span class="right-container-arrow"></span>
                 </div>
@@ -192,7 +190,9 @@
                 <div class="text-box-container">
                     <h2>Intro to Android App Development 101</h2>
                     <small>Jan 2024 - April 2024</small>
-                    <p>Semester long course that contained mini-units of android development and small mini-projects</p>
+                    <p>Semester long course that contained multiple units of android development and small mini-projects
+                        along the way
+                    </p>
                     <span class="right-container-arrow"></span>
                 </div>
             </div>
@@ -203,7 +203,7 @@
                     <h2>Personal Porfolio Website</h2>
                     <small>April 2024 - Present</small>
                     <p>A personal website that contains all projects, about me and a place
-                        to show off my skills
+                        to show off my skills using HTML, CSS and JavaScript
                     </p>
                     <span class="left-container-arrow"></span>
                 </div>
