added minor details such as last updated

--- a/index.html
+++ b/index.html
@@ -155,15 +155,22 @@
             See my projects
         </div>
 
-        <div class="projectButton">
-            <a href="/projects.html" id="">
-                <span></span>
-                <span></span>
-                <span></span>
-                <span></span>
-                Projects
-            </a>
+        <div class="projectButtonContainer">
+            <div class="projectButton">
+                <a href="/projects.html" id="">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    Projects
+                </a>
+            </div>
+
+            <div class="lastUpdated">
+                Last Updated: 6/15/2024 
+            </div>
         </div>
+
     </section>
     <!--For linking of JavaScript-->
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
