--- a/projects.html
+++ b/projects.html
@@ -153,7 +153,7 @@
                 <img src="images/girlyoumatter-logo.png">
                 <div class="text-box-container">
                     <h2>Girl You Matter</h2>
-                    <small>Aug 2023 - Present</small>
+                    <small>Aug 2023 - June 2024</small>
                     <p>Built and maintained multiple versions (V1, V2, and V3) of a website for a 
                         non-profit organization that supports girls transitioning from middle school to high school.
                     </p>
@@ -201,7 +201,7 @@
                 <img src="images/computerlogo.png">
                 <div class="text-box-container">
                     <h2>Personal Porfolio Website</h2>
-                    <small>April 2024 - Present</small>
+                    <small>April 2024 - June 2024</small>
                     <p>A personal website that contains all projects, about me and a place
                         to show off my skills using HTML, CSS and JavaScript
                     </p>
