--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
             <div class="text02andstyle">
                 <h3 class="text02">My name is Dhruv Tripathi</h3>
-                <p class="text02-style">CS Undergrad @UTD. Future Cybersecurity Professional. Designer.</p>
+                <p class="text02-style">CS Undergrad @UTD. Future Cybersecurity Professional.</p>
 
                 <div class="text-container02">
                     <h3>and I'm <span class="auto-type"></span></h3>
@@ -134,7 +134,7 @@
                         <p class="about-text" data-aos="fade-right" data-aos-duration="1000">
                             Hey there, I'm <a href="https://www.linkedin.com/in/dhruv-tripathi-2a663227a/">Dhruv Tripathi</a>, a Computer Science undergraduate at the
                             <span class="UTD">University of Texas at Dallas</span> with plans to graduate in the Spring of 2027. 
-                            My interests lie in software engineering, cybersecurity, and web development, where I'm always eager to explore and innovate. 
+                            My interests lie in cybersecurity, web development, and cloud services where I'm always eager to explore and innovate. 
                             I'm skilled in Python, Java, HTML, CSS, JavaScript, and XML, and I'm constantly seeking new challenges to expand my skill set. 
                             Currently, I'm on the lookout for <strong>internships</strong> that will allow me to apply my knowledge in real-world scenarios and contribute to exciting projects. 
                             Take a peek into my portfolio and <strong>explore</strong> the diverse range of projects I've crafted with passion and precision.
@@ -151,9 +151,9 @@
             <span class="text sec-text"></span>
         </div>
 
-        <div class="projectsText" data-aos="zoom-in" data-aos-duration="3000">
+        <!-- <div class="projectsText" data-aos="zoom-in" data-aos-duration="3000">
             See my projects
-        </div>
+        </div> -->
 
         <div class="projectButtonContainer">
             <div class="projectButton">
