--- a/index.html
+++ b/index.html
@@ -39,6 +39,24 @@
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&family=Exo+2:ital,wght@0,100..900;1,100..900&family=Jacquard+12+Charted&family=Libre+Franklin:ital,wght@0,100..900;1,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Rajdhani:wght@300;400;500;600;700&family=Rubik:ital,wght@0,300..900;1,300..900&family=Teachers:ital,wght@0,400..800;1,400..800&display=swap" rel="stylesheet">
     
 </head>
+
+    <!--TODO:
+        - Create new EPICS mainpage 
+            - Details about what is EPICS and "Click to view project below"
+            - Have multiple AI generated Logos for projects and Slogan for semester + year
+        - Update Resume page and replace previous resume with updated one
+        - Complete redesign of Codepath Android page with Codepath Cybersecurity page
+        - Have Codepath mainpage
+            - Leads to pages specific about Codepath CYB 101, 102, etc (future CodePath courses)
+        - Built NASA MicroGNext Page
+        - Built Additional Projects page
+            - Built HackFESTA page
+            - Axxess Hackathon page
+        - Rewrite paragraph "What are these Projects" in Projects page to not include buzzwords and picture as well
+
+    -->
+
+
 <body>
     <!-- <div class="wrapperBox">
         <div class="box">
