Added styled figcaption cards in epics main page

--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
         - Create new EPICS mainpage 
             - Details about what is EPICS and "Click to view project below"
             - Have multiple AI generated Logos for projects and Slogan for semester + year
+            - Have big cards like on eLearning for project views 
+                - Other ideas:
+                    - Timeline, small cards like tech stack does
         - Update Resume page and replace previous resume with updated one
         - Complete redesign of Codepath Android page with Codepath Cybersecurity page
         - Have Codepath mainpage
@@ -53,7 +56,9 @@
             - Built HackFESTA page
             - Axxess Hackathon page
         - Rewrite paragraph "What are these Projects" in Projects page to not include buzzwords and picture as well
-
+        - In Codepath page (CYB 101 not mainpage)
+            - Have sections of units 1,2,3 and have a box with one half filled with units
+            and the other half with what you learnt
     -->
 
 
