worked on codepath page, epics main page, css, and created separate pages for cyb and epics

--- a/epicsSoccerRobot.html
+++ b/epicsSoccerRobot.html
@@ -72,7 +72,7 @@
         </section>
 
     <!--What are these projects about?-->
-    <section class="epicsSection">
+    <!-- <section class="epicsSection">
         <div class="epicsContainer">
             <div class="epicsContainerRow">
                 <div class="epicsImageContainer" data-aos="fade-right" data-aos-duration="1000">
@@ -93,7 +93,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!--What are these projects about?-->
     <section class="info">
