--- a/index.html
+++ b/index.html
@@ -44,10 +44,7 @@
         - Create new EPICS mainpage 
             - Details about what is EPICS and "Click to view project below"
             - Have multiple AI generated Logos for projects and Slogan for semester + year
-            - Have big cards like on eLearning for project views 
-                - Other ideas:
-                    - Timeline, small cards like tech stack does
-        - Update Resume page and replace previous resume with updated one
+            - Have cards like on eLearning for project views 
         - Complete redesign of Codepath Android page with Codepath Cybersecurity page
         - Have Codepath mainpage
             - Leads to pages specific about Codepath CYB 101, 102, etc (future CodePath courses)
@@ -59,6 +56,10 @@
         - In Codepath page (CYB 101 not mainpage)
             - Have sections of units 1,2,3 and have a box with one half filled with units
             and the other half with what you learnt
+
+        Tasks Finished:
+            - Update Resume page and replace previous resume with updated one
+
     -->
 
 
