--- a/projects.html
+++ b/projects.html
@@ -92,25 +92,27 @@
                 <div class="hoveringContainer">
                     <div class="outterimgwrap" data-aos="fade-right" data-aos-duration="2000">
                         <div class="imgwrap">
-                            <a href="epics.html"><img class="boxImage"  src="images/epicslogo-removebg-preview.png" alt="">
+                            <a href="epicsMainPage.html"><img class="boxImage"  src="images/epicslogo-removebg-preview.png" alt="">
                             </a>
                         </div>
                     </div>
                 </div>
 
+                <!--UNDER CONSTRUCTION-->
                 <div class="hoveringContainer">
                     <div class="outterimgwrap" data-aos="fade-right" data-aos-duration="2000">
                         <div class="imgwrap">
-                            <a href="codepath.html"><img class="boxImage" src="images/codepathlogo.jpg" alt="">
+                            <a href="construction.html"><img class="boxImage" src="images/codepathlogo.jpg" alt="">
                             </a>
                         </div>
                     </div>
                 </div>
 
+                <!--UNDER CONSTRUCTION-->
                 <div class="hoveringContainer">
                     <div class="outterimgwrap" data-aos="fade-up" data-aos-duration="2000">
                         <div class="imgwrap">
-                            <a href="nasaproject.html"><img class="boxImage" src="images/nasaMICRO.jpg" alt="">
+                            <a href="construction.html"><img class="boxImage" src="images/nasaMICRO.jpg" alt="">
                             </a>                            
                         </div>
                     </div>
