--- a/resume.html
+++ b/resume.html
@@ -71,7 +71,7 @@
     <section class="downloadButtonSection">
         <div class="downloadButtonContainer" data-aos="fade-in" data-aos-duration="2000">
             <div class="downloadButton">
-                <a href="images/Tripathi, Dhruv - UPDATED Resume.pdf" download='Tripathi, Dhruv Resume'
+                <a href="images/2024DhruvTripathiResume.pdf" download='Tripathi, Dhruv Resume'
                 class="download-btn">Download Resume
                     <i class="fas fa-download"></i></a>
             </div>
@@ -81,7 +81,7 @@
     <section class="resumeSection">
         <div class="resumeOuterContainer" data-aos="fade-in" data-aos-duration="2000">
             <div class="resumeInnerContainer">
-                <img src="images/Tripathi_-Dhruv-UPDATED-Resume.svg" alt="">
+                <img src="images/2024DhruvTripathiResume.svg" alt="">
             </div>
         </div>
     </section>
