--- a/epicsMainPage.html
+++ b/epicsMainPage.html
@@ -110,28 +110,28 @@
     <!--Project lists-->
 
     <section class="section-6">
-        <div class="heading">
-          <h1>Click to View a Project Below</h1>
-        </div>
         <div class="row">
         <!--First figure-->
           <figure class="figure">
-            <img src="https://images.pexels.com/photos/2098427/pexels-photo-2098427.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940">
+            <img src="images/UTDSOCCERROBOT.png">
             <figcaption>
-              <h3>Isaac Asimov</h3>
-              <p>"But suppose we were to teach creationism. What would be the content of the teaching?
-                Merely that a creatore formed the universe and all specias of life ready-made? Nothing? No details?"
+              <h3>Project Description</h3>
+              <p> This project consisted of creating a website and with 
+                working with an engineering team to create a soccer robot match
               </p>
-              <a href="#">Learn More</a>
+              <a class="aLink" href="epicsSoccerRobot.html">Learn More</a>
              </figcaption>
           </figure>
 
+          <!--UNDER CONSTRUCTION-->
           <figure class="figure">
-            <img src="https://images.pexels.com/photos/1624438/pexels-photo-1624438.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260">
+            <img src="images/SWINGAI.png">
             <figcaption>
-              <h3>Philip K. Dick</h3>
-              <p>"I, for one, bet on science as helping us. I have yet to see how it fundamentally endagers us, even with the H-bomb lurking about.
-                 Science has given us more lives than it has taken; we must remember that"</p>
+              <h3>Project Description</h3>
+              <p> This project consisted of creating a website and using AI models
+                to detect and monitor unilateral cerebral palsy
+              </p>
+              <a class="aLink" href="construction.html">Learn More</a>
             </figcaption>
           </figure>
 
