Added units information on codepath page

--- a/codepathcyb_101.html
+++ b/codepathcyb_101.html
@@ -146,8 +146,8 @@
                             <li>SSL protocol, certificates, TLS handshake</li>
                     </div>
                         <div class="tab-content-right">
-                            <a href="https://www.hackthebox.com/blog/what-is-ctf#mcetoc_1gflp2k395at">
-                                <img src="image1.png" alt="Unit 1 Image" />
+                            <a href="https://www.freecodecamp.org/news/command-line-for-beginners/">
+                                <img src="images/terminalLogo.png" alt="Unit 1 Image" />
                             </a>
                         </div>
                     </div>
@@ -158,19 +158,17 @@
                             <div class="learned-title">
                                 <h3>What I learned in Unit 3</h3>
                             </div>                        
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
+                                <li>John the ripper password cracker</li>
+                                <li>Using/writing John commands</li>
+                                <li>Device indentities such as Zero Trust</li>
+                                <li>Three factors of authentication</li>
+                                <li>Types of authentication (2FA, MFA)</li>
+                                <li>Unix file permissions</li>
+                                <li>Password encryption</li>
                         </div>
                             <div class="tab-content-right">
-                                <a href="https://www.hackthebox.com/blog/what-is-ctf#mcetoc_1gflp2k395at">
-                                    <img src="image1.png" alt="Unit 1 Image" />
+                                <a href="https://www.openwall.com/john/doc/">
+                                    <img src="images/johntheripperlogo.png" alt="Unit 1 Image" />
                                 </a>
                             </div>
                         </div>
@@ -181,19 +179,20 @@
                         <div class="learned-title">
                             <h3>What I learned in Unit 4</h3>
                         </div>                        
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
+                            <li>Linux folder structure & commands such as dig</li>
+                            <li>Hosts file in Linux & roles such as nano</li>
+                            <li>Spoofing a website with a fake IP address</li>
+                            <li>Using nmap & metasploit framework</li>
+                            <li>Using the vsftpd backdoor exploit</li>
+                            <li>How routers, firewalls, load balancers</li>
+                            <li>MAC addresses, Address Resolution Protocol (ARP), DNS</li>
+                            <li>DNS resolution, DHCP, local DNS, ISP DNS, root DNS</li>
+                            <li>Border Gateway Protocol, Network Instrusion Detection</li>
+                            <li>Blackhole routing, Rate limiting, Traffic scrubbing</li>
                     </div>
                         <div class="tab-content-right">
-                            <a href="https://www.hackthebox.com/blog/what-is-ctf#mcetoc_1gflp2k395at">
-                                <img src="image1.png" alt="Unit 1 Image" />
+                            <a href="https://docs.metasploit.com">
+                                <img src="images/metasploitableLogo.png" alt="Unit 1 Image" />
                             </a>
                         </div>
                     </div>
@@ -204,19 +203,17 @@
                             <div class="learned-title">
                                 <h3>What I learned in Unit 5</h3>
                             </div>                        
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
+                                <li>How to use VirusTotal & EICAR Anti-Virus files</li>
+                                <li>Using vt-cli tools</li>
+                                <li>Viruses, Worms, Trojan horses, Ransomware</li>
+                                <li>Types of antivirus software</li>
+                                <li>Malware signatures</li>
+                                <li>Process isolation, VMs</li>
+                                <li>Forensic artifacts & tools such as Wireshark</li>
                     </div>
                         <div class="tab-content-right">
-                            <a href="https://www.hackthebox.com/blog/what-is-ctf#mcetoc_1gflp2k395at">
-                                <img src="image1.png" alt="Unit 1 Image" />
+                            <a href="https://docs.virustotal.com/docs/how-it-works">
+                                <img src="images/virustotal.svg" alt="Unit 1 Image" />
                             </a>
                         </div>
                     </div>
@@ -226,19 +223,17 @@
                             <div class="learned-title">
                                 <h3>What I learned in Unit 6</h3>
                             </div>                        
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
+                                <li>Using Cyberchef to look at Metadata</li>
+                                <li>Hex values, Frame Tasks, Steganography</li>
+                                <li>3 States of Data: Rest, Motion, Use</li>
+                                <li>Data exfiltration</li>
+                                <li>HIPPA, COPPA, FERPA Data Laws</li>
+                                <li>Data Loss Prevention Techniques</li>
+                                <li>Using steghide to embed messages into images</li>
                 </div>
                     <div class="tab-content-right">
-                        <a href="https://www.hackthebox.com/blog/what-is-ctf#mcetoc_1gflp2k395at">
-                            <img src="image1.png" alt="Unit 1 Image" />
+                        <a href="https://medium.com/@ece11106.sbit/steghide-tool-ec74edd69de4">
+                            <img src="images/steghideLogo.webp" alt="Unit 1 Image" />
                         </a>
                     </div>
                 </div>
@@ -249,19 +244,17 @@
                         <div class="learned-title">
                             <h3>What I learned in Unit 7</h3>
                         </div>                        
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
+                            <li>How to use Shodan</li>
+                            <li>Writing python scripts to get JSON data using Shodan API</li>
+                            <li>OSINT (Open source Intelligence)</li>
+                            <li>Threat Intelligence: Analysis of actors's motives & targets</li>
+                            <li>Levels of Threat Intelligence</li>
+                            <li>Strategic, Tactical & Operational OSINT</li>
+                            <li>Sources of OSINT</li>
                     </div>
                         <div class="tab-content-right">
-                            <a href="https://www.hackthebox.com/blog/what-is-ctf#mcetoc_1gflp2k395at">
-                                <img src="image1.png" alt="Unit 1 Image" />
+                            <a href="https://www.shodan.io">
+                                <img src="images/shodanLogo.png" alt="Unit 1 Image" />
                             </a>
                         </div>
                     </div>
@@ -271,7 +264,9 @@
                         <div class="tab-content-left">Unit 8</div>
                         <div class="tab-content-middle">
                             <div class="learned-title">
-                                <h3>What I learned in Unit 8</h3>
+                                <h3>Capstone Project</h3>
+                                <h4>PHI$H TANK</h4>
+                                <h5>Milestone 1</h5>
                             </div>                        
                                 <li></li>
                                 <li></li>
@@ -295,7 +290,9 @@
                         <div class="tab-content-left">Unit 9</div>
                         <div class="tab-content-middle">
                             <div class="learned-title">
-                                <h3>What I learned in Unit 9</h3>
+                                <h3>Capstone Project</h3>
+                                <h4>PHI$H TANK</h4>
+                                <h5>Milestone 2</h5>
                             </div>                        
                                 <li></li>
                                 <li></li>
@@ -318,7 +315,9 @@
                         <div class="tab-content-left">Unit 10</div>
                         <div class="tab-content-middle">
                             <div class="learned-title">
-                                <h3>What I learned in Unit 10</h3>
+                                <h3>Capstone Project</h3>
+                                <h4>PHI$H TANK</h4>
+                                <h5>Demo Day</h5>
                             </div>                        
                                 <li></li>
                                 <li></li>
