codepath page redirection

--- a/projects.html
+++ b/projects.html
@@ -98,11 +98,10 @@
                     </div>
                 </div>
 
-                <!--UNDER CONSTRUCTION-->
                 <div class="hoveringContainer">
                     <div class="outterimgwrap" data-aos="fade-right" data-aos-duration="2000">
                         <div class="imgwrap">
-                            <a href="construction.html"><img class="boxImage" src="images/codepathlogo.jpg" alt="">
+                            <a href="codepathcyb_101.html"><img class="boxImage" src="images/codepathlogo.jpg" alt="">
                             </a>
                         </div>
                     </div>
