Made some edits on index page

--- a/index.html
+++ b/index.html
@@ -41,24 +41,24 @@
 </head>
 
     <!--TODO:
-        - Complete redesign of Codepath Android page with Codepath Cybersecurity page
-        - Have Codepath mainpage
-            - Leads to pages specific about Codepath CYB 101, 102, etc (future CodePath courses)
         - Built NASA MicroGNext Page
         - Built Additional Projects page
             - Built HackFESTA page
             - Axxess Hackathon page
         - Rewrite paragraph "What are these Projects" in Projects page to not include buzzwords and picture as well
-        - In Codepath page (CYB 101 not mainpage)
-            - Have sections of units 1,2,3 and have a box with one half filled with units
-            and the other half with what you learnt
 
         Tasks Finished:
             - Update Resume page and replace previous resume with updated one
             - Create new EPICS mainpage 
             - Details about what is EPICS and "Click to view project below"
             - Have multiple AI generated Logos for projects and Slogan for semester + year
-            - Have cards like on eLearning for project views 
+            - Have cards like on eLearning for project views
+            - Complete redesign of Codepath Android page with Codepath Cybersecurity page
+            - Have Codepath mainpage
+            - Leads to pages specific about Codepath CYB 101, 102, etc (future CodePath courses)
+            - In Codepath page (CYB 101 not mainpage)
+            - Have sections of units 1,2,3 and have a box with one half filled with units
+            and the other half with what you learnt
     -->
 
 
@@ -110,7 +110,7 @@
                 <p class="text02-style">CS Undergrad @UTD. Future Cybersecurity Professional.</p>
 
                 <div class="text-container02">
-                    <h3>and I'm <span class="auto-type"></span></h3>
+                    <h3>and I'm a <span class="auto-type"></span></h3>
                 </div>
             </div>
 
@@ -169,10 +169,10 @@
     </section>
 
     <section class="typeWriterContainer">
-        <div class="textContainer" data-aos="zoom-in" data-aos-duration="1000">
+        <!-- <div class="textContainer" data-aos="zoom-in" data-aos-duration="1000">
             <span class="text first-text">I'm a</span>
             <span class="text sec-text"></span>
-        </div>
+        </div> -->
 
         <!-- <div class="projectsText" data-aos="zoom-in" data-aos-duration="3000">
             See my projects
