--- a/projects.html
+++ b/projects.html
@@ -66,6 +66,36 @@
         </div>
     </section>
 
+
+    <!--What are these projects about?-->
+    <section class="info">
+        <div class="infoContainer">
+            <div class="infoContainerRow">
+                <div class="infoImageContainer" data-aos="fade-right" data-aos-duration="1000">
+                    <img src="images/SWEimage2.jpg">
+                </div>
+                <div class="infoContainerText" data-aos="fade-left" data-aos-duration="2000">
+                    <h1>What are these projects?</h1>
+                    <div class="infoContainerTextPClass">
+                        <p class="infoContainerTextPClassContainer">
+                            These projects include a mix of full-stack applications, 
+                            front-end designs, <strong>real-world</strong> collaborations with nonprofits, and participation in CTFs and hackathons.
+                             Each one provided an opportunity to solve unique <strong>challenges</strong> , whether through building interactive user interfaces, 
+                             integrating backend functionality, or brainstorming creative solutions under time 
+                             constraints during competitions. 
+
+                            Working on these projects was both enjoyable and educational.
+                            I gained <strong>hands-on experience</strong> in web development, teamwork, problem-solving, 
+                            and real-world application of cybersecurity concepts. 
+                            Collaborating on these initiatives helped me <strong>strengthen</strong> 
+                            technical skills while understanding the importance of user-focused design and effective communication.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!--Projects section-->
     
     <section class="testContainer">
@@ -121,34 +151,10 @@
         </div>
     </section>
 
-
-    <!--What are these projects about?-->
-    <section class="info">
-        <div class="infoContainer">
-            <div class="infoContainerRow">
-                <div class="infoImageContainer" data-aos="fade-right" data-aos-duration="1000">
-                    <img src="images/SWEimage2.jpg">
-                </div>
-                <div class="infoContainerText" data-aos="fade-left" data-aos-duration="2000">
-                    <h1>What are these projects?</h1>
-                    <div class="infoContainerTextPClass">
-                        <p class="infoContainerTextPClassContainer">
-                            These projects represent a <strong>diverse</strong> spectrum of innovation and collaboration, 
-                            each one contributing a unique narrative to the ever-evolving landscape of modern design and engineering. From concept to execution, each project embodies a
-                             unique blend of creativity, technology, and purpose, pushing the boundaries of what is possible. They showcase the boundless possibilities of 
-                             modern design and engineering, illustrating the incredible potential that arises when imagination meets technical prowess. 
-                             Through the seamless integration of various disciplines and the collaborative efforts of talented individuals, 
-                             these projects not only solve problems but also inspire new ways of thinking and doing, 
-                             highlighting the transformative power of innovation in our world.
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+    <!--Additional Projects-->
 
     <!--Timeline section-->
-    <section class="timelineContainer">
+    <!-- <section class="timelineContainer">
         <div class="timeline" data-aos="zoom-in" data-aos-duration="2000">
             <div class="container-4 left-container">
                 <img src="images/girlyoumatter-logo.png">
@@ -187,30 +193,31 @@
             </div>
 
             <div class="container-4 right-container">
-                <img src="images/codepathlogo.jpg">
+                <img src="images/computerlogo.png">
                 <div class="text-box-container">
-                    <h2>Intro to Android App Development 101</h2>
-                    <small>Jan 2024 - April 2024</small>
-                    <p>Semester long course that contained multiple units of android development and small mini-projects
-                        along the way
+                    <h2>Personal Porfolio Website</h2>
+                    <small>April 2024 - Present</small>
+                    <p>A personal website that contains all projects, about me and a place
+                        to show off my skills using HTML, CSS and JavaScript
                     </p>
                     <span class="right-container-arrow"></span>
                 </div>
             </div>
 
             <div class="container-4 left-container">
-                <img src="images/computerlogo.png">
+                <img src="images/epicslogo-removebg-preview.png">
                 <div class="text-box-container">
-                    <h2>Personal Porfolio Website</h2>
-                    <small>April 2024 - June 2024</small>
-                    <p>A personal website that contains all projects, about me and a place
-                        to show off my skills using HTML, CSS and JavaScript
+                    <h2>UT Design EPICS 2024</h2>
+                    <small>August 2024 - December 2024</small>
+                    <p>Semester long project building a web application that uses an AI model and video footage
+                        to treat UCP instead of relying on physical markers
                     </p>
                     <span class="left-container-arrow"></span>
                 </div>
             </div>
+
         </div>
-    </section>
+    </section> -->
 
     <section class="backButton">
         <div class="projectButton">
