additional projects button added

--- a/projects.html
+++ b/projects.html
@@ -219,6 +219,14 @@
         </div>
     </section> -->
 
+    <section class="addProjButton">
+        <div class="addProjButtonContainer">
+            <a href="/construction.html" class="btn">
+                Additional Projects
+            </a>
+        </div>
+    </section>
+
     <section class="backButton">
         <div class="projectButton">
             <a href="/index.html" id="">
